# react-native-soundkit

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  LICENSE
package/: .clang-format  .eslintrc.js  .gitattributes  .gitignore  .prettierrc.js  babel.config.js  package-lock.json  package.json  react-native-soundkit.podspec  react-native.config.js  tsconfig.json
package/android/: CMakeLists.txt  build.gradle  gradle.properties
package/example/: app.json  package-lock.json  package.json
package/example/android/: settings.gradle
package/example/android/app/: build.gradle
package/example/android/app/src/main/java/com/soundkitexample/: MainActivity.kt  MainApplication.kt
package/example/android/app/src/main/res/values/: strings.xml
package/example/ios/: Podfile
package/example/ios/SoundKitExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
package/example/ios/SoundKitExample.xcodeproj/: project.pbxproj
package/example/ios/SoundKitExample.xcodeproj/xcshareddata/xcschemes/: SoundKitExample.xcscheme
package/example/ios/SoundKitExample.xcworkspace/: contents.xcworkspacedata
package/example/ios/SoundKitExampleTests/: SoundKitExampleTests.m
package/scripts/: clang-format.sh
